--- a/THANKS
+++ b/THANKS
@@ -55,6 +55,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Jenny Sorce                          jenny.sorce@univ-lyon1.fr
     Lee Spitler                          lee.spitler@mq.edu.au
     Richard Stallman                     rms@gnu.org
+    Michael Stein                        mstein@astro.rub.de
     Ole Streicher                        olebole@debian.org
     Alfred M. Szmidt                     ams@gnu.org
     Michel Tallon                        mtallon@obs.univ-lyon1.fr
