Statistics library function to remove outliers
A new statistics library function called `gal_statistics_outlier_positive'
is now available in the library to help in identifying and removing
outliers from a distribution.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
     -- gal_fits_key_write_in_ptr: New name of gal_fits_key_write.
     -- gal_fits_key_write_version_in_ptr: new name of gal_fits_key_write_version.
     -- gal_fits_key_write_config: write key list and version as config header.
+    -- gal_statistics_outlier_positive: Find the first positive outlier.
 
 ** Removed features
 
