NoiseChisel uses outlier rejection algorithm on qthresh
Until now, the user had to manually specify a quantile to remove some tiles
from the quantile threshold interpolation step. But this solution was not
generic and too ugly (too dependent on each particular input dataset).

A new outlier identification algorithm was re-implemented in Gnuastro's
statistics library (the library function had been commented out) in the
previous commit for this purpose. With this commit, it now replaces the
manual quantile identification of NoiseChisel. To configure this new
algorithm, three new options have been added to it as described in the book
and the NEWS file.

This task was found after a great discussion with Pierre-Alain Duc on some
of his datasets during the Lorentz center workshop on "The Bewildering
Nature of Ultra-diffuse Galaxies", in Leiden, The Netherlands.

--- a/NEWS
+++ b/NEWS
@@ -11,13 +11,25 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Library:
     -- gal_fits_key_list_reverse: Reverse the given list of FITS keywords.
-    -- gal_fits_key_write_title_in_ptr: Write a two-line title in FITS keywords.
+    -- gal_fits_key_write_title_in_ptr: Write a two-line title FITS keyword.
     -- gal_fits_key_write_in_ptr: New name of gal_fits_key_write.
-    -- gal_fits_key_write_version_in_ptr: new name of gal_fits_key_write_version.
+    -- gal_fits_key_write_version_in_ptr: old gal_fits_key_write_version.
     -- gal_fits_key_write_config: write key list and version as config header.
     -- gal_statistics_outlier_positive: Find the first positive outlier.
 
+  NoiseChisel:
+    -- New outlier identification algorithm for the quantile threshold
+       step. It is very useful when there are extended and bright sources
+       in the dataset: the tiles containing their footprint (outliers) can
+       be identified and removed with the parameters/options below:
+       --qthreshoutnum: Number of elements to search for outliers.
+       --qthreshoutsigma: Multiple of sigma to define an outlier.
+       --qthreshoutsclip: Sigma-clipping parameters for the process.
+
 ** Removed features
+
+  NoiseChisel:
+    --qthreshtilequant: removed due to new outlier rejection algorithm.
 
 ** Changed features
 
