--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Benjamin Clement                     benjamin.clement@univ-lyon1.fr
     Nima Dehdilani                       nimadehdilani@gmail.com
     Antonio Diaz Diaz                    antonio@gnu.org
+    Pierre-Alain Duc                     pierre-alain.duc@astro.unistra.fr
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
     Stephen Hamer                        stephen.hamer@univ-lyon1.fr
