--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Nima Dehdilani                       nimadehdilani@gmail.com
     Antonio Diaz Diaz                    antonio@gnu.org
     Pierre-Alain Duc                     pierre-alain.duc@astro.unistra.fr
+    Gaspar Galaz                         ggalaz@astro.puc.cl
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
     Stephen Hamer                        stephen.hamer@univ-lyon1.fr
